--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <div class="header cover_photo">
 
         <h1>Omri Digmi</h1>
-        <p>יזם, מנהל מוצר ויוצר</p>
+        <p>יזם, מנהל מוצר </p>
         <div class="social-links">
     <a href="https://instagram.com/omri_digmi" target="_blank">Instagram</a>
     <a href="https://www.linkedin.com/in/omri.Digmi" target="_blank">LinkedIn</a>
